<resources>
    <string name="app_name">MobileSafe</string>
    <string name="beat">Beat版</string>
    <string name="home">主界面</string>
    <string name="describe">我是一个功能齐全的手机卫士，可以好好的保护你的手机，千万不要把我卸载掉哦！</string>
    <string name="enterPassword">登陆密码</string>
    <string name="inputPassword">输入密码：</string>
    <string name="reInputPassword">确认密码：</string>
    <string name="commit">确定</string>
    <string name="percentage_of_memory_used">内存占用率：</string>
    <string name="login">登陆</string>
    <string name="BAI_FEN_HAO">%</string>
    <string name="setup1Title">1、欢迎使用手机防盗</string>
    <string name="setup1Description">您的手机防盗卫士：</string>
    <string name="simChangeMessage">SIM卡变更报警</string>
    <string name="gpsMessage">GPS追踪：</string>
    <string name="remoteLock">远程锁屏：</string>
    <string name="remoteCleanData">远程清除数据：</string>
    <string name="next">下一步</string>
    <string name="pre">上一步</string>
    <string name="simBind">2、手机卡绑定</string>
    <string name="simBindOrUnbind">点击绑定/解绑SIM卡</string>
    <string name="setSafeNumber">3、设置安全号码</string>
    <string name="setup2Description">通过绑定SIM：\n下次重启手机如果发现SIM卡不一致，就会发送报警短信</string>
    <string name="selectSafeNum">选择联系人</string>
    <string name="setFinish">4、恭喜你完成设置</string>
    <string name="selectSafe">打钩开启防盗保护</string>
    <string name="setupFinish">完成设置</string>
    <string name="guardSurface">手机防盗界面</string>
    <string name="safeNum">安全号码：</string>
    <string name="reSet">重新进入设置向导界面</string>
    <string name="musicAlarm">音乐报警:#*music*#</string>
    <string name="gpsToken">GPS追踪：#*gps*#</string>
    <string name="remoteLockScreen">远程锁屏：#*lockscreen*#</string>
    <string name="wipeData">远程清除数据：#*wipedata*#</string>
    <string name="showIsOpenSafe">防盗保护未开启</string>
    <string name="sample_device_admin_description">开启设备管理器</string>
    <string name="modifyTitle">修改标题</string>
    <string name="settingCenter">设置中心</string>
    <string name="blacklist">黑名单</string>
    <string name="noFoundData">没有数据</string>
    <string name="addBlacklistUseHand">手动添加</string>
    <string name="addBlacklistFromCantacts">从联系人导入</string>
    <string name="addBlacklistFromSms">从信息导入</string>
    <string name="addBlacklist">添加黑名单</string>
    <string name="blacklistPhone">电话：</string>
    <string name="negative">取消</string>
    <string name="selectMode">模式选择:</string>
    <string name="phone">电话</string>
    <string name="sms">信息</string>
    <string name="inputBlacklistNumHint">请输入要加入黑名单的号码</string>
    <string name="addBlacklistFromCallLog">从通话记录导入</string>
    <string name="advancedTools">高级工具</string>
    <string name="queryPhoneLocation">归属地查询</string>
    <string name="smsBackups">短信备份</string>
    <string name="phoneLocationCheck">号码归属地查询</string>
    <string name="smsResume">短信还原</string>
    <string name="softwareManager">软件管家</string>
    <string name="setting">设置</string>
    <string name="selectAll">全选</string>
    <string name="lockClearTask">锁屏清理进程</string>
    <string name="showSysTask">显示系统进程</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
