<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlacklist"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/addBlacklist"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/blacklistPhone"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/et_dialog_input_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blacklist_edittext_shape"
            android:hint="@string/inputBlacklistNumHint"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/tv_select_mode"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/selectMode"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <CheckBox

            android:id="@+id/cd_blacklist_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_select_mode"
            android:text="@string/phone"
            android:textColor="@android:color/black"/>

        <CheckBox
            android:id="@+id/cd_blacklist_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/cd_blacklist_phone"
            android:text="@string/sms"
            android:textColor="@android:color/black"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/b_dialog_blacklist_positive"
            style="@style/DialogButtonStyle"
            android:background="@drawable/blacklist_bt_selector"
            android:text="@string/commit"
            />

        <Button
            android:id="@+id/b_dialog_blacklist_negative"
            style="@style/DialogButtonStyle"
            android:layout_alignParentEnd="true"
            android:background="@drawable/blacklist_bt_selector"
            android:text="@string/negative"
            />
    </RelativeLayout>


</LinearLayout>
