<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setup1"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.customview.xiaohui.mobilesafe.activitys.Setup1Activity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorHomeToolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/setup1Title"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_margin="5dp"
        android:text="@string/setup1Description"/>
    <TextView
        style="@style/setupText"
        android:drawableLeft="@drawable/blue_circle"
        android:text="@string/simChangeMessage"
        />
    <TextView
        style="@style/setupText"
        android:drawableLeft="@drawable/green_circle"
        android:text="@string/gpsMessage"
        />
    <TextView
        style="@style/setupText"
        android:drawableLeft="@drawable/red_circle"
        android:text="@string/remoteLock"
        />
    <TextView
        style="@style/setupText"
        android:drawableLeft="@drawable/green_circle"
        android:text="@string/remoteCleanData"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="10dp"
            android:background="@drawable/green_point"
            android:layout_gravity="center"
            android:layout_height="10dp"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/gray_point"
            android:layout_gravity="center"
            android:layout_height="10dp"/>
        <ImageView
            android:layout_width="10dp"
            android:background="@drawable/gray_point"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_height="10dp"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/gray_point"
            android:layout_gravity="center"
            android:layout_height="10dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/setup1"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>
        <Button
            style="@style/setupButtonNext"/>
    </RelativeLayout>
</LinearLayout>
