<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHomeToolbar"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/enterPassword"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputPassword"
            android:textSize="20sp"
            />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_dialog_enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/safe_edittext_shape"
            />
    </LinearLayout>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bt_selector"
        android:text="@string/commit"
        android:id="@+id/b_dialog_enter_commit"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

</LinearLayout>
