<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setup1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.customview.xiaohui.mobilesafe.activitys.Setup1Activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorHomeToolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/setFinish"
            android:textColor="@android:color/white"
            android:textSize="30sp"/>
    </android.support.v7.widget.Toolbar>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_setup4_start_protect"
        android:text="@string/selectSafe"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/tv_setup4_show_message"
        android:text="防盗保护未开启"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:background="@drawable/gray_point"/>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/gray_point"/>


        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/gray_point"/>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/green_point"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/phone"/>

        <Button

            android:text="@string/setupFinish"
            style="@style/setupButtonNext"/>

        <Button

            style="@style/setupButtonPre"/>
    </RelativeLayout>
</LinearLayout>
