<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setup1"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.customview.xiaohui.mobilesafe.activitys.Setup1Activity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorHomeToolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/simBind"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_margin="5dp"
        android:text="@string/setup2Description"/>
    <RelativeLayout
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:background="@drawable/bt_selector"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_setup2_bind_sim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:text="@string/simBindOrUnbind"
            />
    <ImageView
        android:id="@+id/iv_setup2_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/unlock"
        android:layout_marginEnd="5dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="10dp"
            android:background="@drawable/gray_point"
            android:layout_gravity="center"
            android:layout_height="10dp"/>
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="10dp"
            android:background="@drawable/green_point"
            android:layout_gravity="center"
            android:layout_height="10dp"/>
        <ImageView
            android:layout_width="10dp"
            android:background="@drawable/gray_point"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_height="10dp"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/gray_point"
            android:layout_gravity="center"
            android:layout_height="10dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/bind"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>
        <Button
            style="@style/setupButtonNext"/>
        <Button
            style="@style/setupButtonPre"/>
    </RelativeLayout>
</LinearLayout>
